fix: Change 100vh x 100vw to z-index: -1 as it was blocking page selection

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
   height: 100vh;
   overflow: hidden;
   position: absolute;
+  z-index: -1;
 }
 
 @media(min-width: 801px) {
@@ -93,10 +94,12 @@ h1 a {
   padding-top: 10px;
 }
 
-h1 a:hover {
-  background-color: #DF442C;
-  color: white;
-  text-decoration: none;
+@media(min-width:801px) {
+  h1 a:hover {
+    background-color: #DF442C;
+    color: white;
+    text-decoration: none;
+  }
 }
 
 h2 {
